--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
   <header id="cabecalho">
+
+    <a href="index.html">
+      <img src="/images/logo.png" alt="Leonardo Majevski Desenvolvedor Front-End" />
+    </a>
+
     <h1 id="titulo">Lessons Learned</h1>
   </header>
 
