--- a/index.html
+++ b/index.html
@@ -7,9 +7,31 @@
   <title>Projeto 01 | Lições aprendidas</title>
 </head>
 <body>
+  
   <header id="cabecalho">
       <h1 id="titulo">Lições aprendidas</h1>
       <h2>Lucas Neves - Turma 09</h2>
   </header>
+
+  <img id="minha_foto" src="minha-foto.jpg" alt="Aqui podemos ver uma foto de Lucas Neves de Oliveira em sua viagem a Gramado">
+
+  <section>
+
+    <ol id="licoes_aprendidas">
+        <h3>Habilidades desenvolvidas</h3>
+        <li>Unix & Bash</li>
+        <li>Internet: protocolo HTTP e status code</li>
+        <li>Git & GitHub: O que é e para que serve</li>
+        <li>HTML Semântico</li>
+        <li>CSS</li>
+        <li>Linkedin: perfil profissional </li>
+        <li>Slack: uso profissional</li>
+        <li>Soft skills: Trabalho ético e Inteligência emocional</li>
+        <li>Como ter mais rendimento nos estudos</li>
+        <li>Como discernir e controlar emoções</li>
+    </ol>
+
+</section>
+
 </body>
 </html>
