Corrigidos erros de semantica e estilizacao

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header id="cabecalho">
-    <h1 id="title">Lições Aprendidas | Trybe</h1>
+    <h1 id="titulo">Lições Aprendidas | Trybe</h1>
   </header>
   <main>
     <section id="sobre">
@@ -21,7 +21,7 @@
       </figure>
     </section>
     <section id="lists">
-      <ol id="licoes_aprendidas">
+      <ol id="licoes_aprendidas" class="lado-esquerdo">
         <li>Bash & Shell</li>
         <li>Git</li>
         <li>GitHub</li>
@@ -33,7 +33,7 @@
         <li>Semantic HTML</li>
         <li>Não mutar o professor</li>
       </ol>
-      <ul id="licoes_a_aprender">
+      <ul id="licoes_a_aprender" class="lado-direito">
         <li>JavaScript</li>
         <li>DOM</li>
         <li>CSS Responsive</li>
@@ -54,21 +54,21 @@
     </article>
     <aside id="passagem">
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate nobis sapiente repellat quis, debitis molestiae, quaerat placeat minus sit sunt rem voluptatibus? Itaque magni reprehenderit voluptatem, distinctio fugit libero beatae.</p>
-      <table>
-        <tr>
-          <th>Coluna 1</th>
-          <th>Coluna 2</th>
-        </tr>
-        <tr>
-          <td>Linha 1</td>
-          <td>Linha 1</td>
-        </tr>
-        <tr>
-          <td>Linha 2</td>
-          <td>Linha 2</td>
-        </tr>
-      </table>
     </aside>
+    <table>
+      <tr>
+        <th>Coluna 1</th>
+        <th>Coluna 2</th>
+      </tr>
+      <tr>
+        <td>Linha 1</td>
+        <td>Linha 1</td>
+      </tr>
+      <tr>
+        <td>Linha 2</td>
+        <td>Linha 2</td>
+      </tr>
+    </table>
   </main>
   <footer id="rodape">
     Lessons Learned Project | Rafael Gerônimo | Trybe
