Requisito 4 atendido por meio de inserçao de lista ordenada contendo 10 itens.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,29 @@
 </head>
 <body>
     <header id="cabecalho">
-    
+
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
 
-    <img src="minha_foto.png" id="minha_foto">
+    <main> 
+        <img src="minha_foto.png" id="minha_foto">
+
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>Internet</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>HTML Semântico</li>
+        </ol>
+    </main>
     
+
+
+
 </body>
 </html>
