Basic structure of html ft profile pic and some bonus requirements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,106 @@
 </head>
 
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo">My Lessons Learned</h1>
+        <nav>
+            <a href="#meu_artigo">Meu artigo</a>
+            <a href="#licoes_aprendidas">Licoes aprendidas</a>
+            <a href="#licoes_a_aprender">Licoes a aprender</a>
+        </nav>
+    </header>
+    <main>
+        <img id="minha_foto" src="profile-pic.png" alt="Foto do perfil de Pedro Castro">
+        <article id="meu_artigo" class="lado-esquerdo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint
+            iusto asperiores eum
+            nostrum veniam
+            repudiandae voluptatem est vitae modi molestias! Magnam dolorum non, eveniet numquam dolore nam maxime eius
+            cum minima doloremque labore debitis! Qui consequatur esse, architecto voluptates possimus magni ab odio vel
+            minus, expedita ex nobis, exercitationem aperiam reiciendis nihil! Ratione possimus esse numquam ipsam odit
+            at fuga deleniti provident quidem nostrum, veritatis accusamus reiciendis non ipsum ut, neque eum quae
+            officiis mollitia dignissimos. Quisquam ea labore, consectetur tenetur aliquam reiciendis facere minus sed.
+            Consequatur architecto eveniet minima maxime necessitatibus. Quas adipisci suscipit totam ad amet
+            consequuntur error, debitis, nam, fugit quaerat id nulla. Illo placeat nemo quis expedita voluptatem sunt
+            iste consequatur, incidunt adipisci magni eos earum, quae eveniet neque dolore sequi perspiciatis maiores
+            quam necessitatibus laudantium reiciendis accusamus dicta obcaecati. Nam dolorem libero magnam numquam,
+            labore eveniet minima ratione ea non mollitia, doloribus voluptates! Dolorum quam hic molestiae doloribus
+            perspiciatis modi ad saepe debitis. Vero eum tempore quis omnis quam aliquam magni dolorem et eaque, sit
+            autem inventore corrupti placeat ut excepturi. Animi sed exercitationem iste dignissimos mollitia.
+            Aspernatur commodi nobis labore quae voluptatibus voluptatem quod fugiat possimus esse veritatis facilis
+            ipsam numquam totam, vitae id a tenetur blanditiis, ut officiis natus quibusdam eius fuga, neque ab? Eum
+            atque, omnis suscipit tempore unde adipisci magnam velit ducimus deserunt
+            <table>
+                <th></th>
+                <td></td>
+                <td></td>
+                <td></td>
 
+                <th></th>
+                <td></td>
+                <td></td>
+                <td></td>
+            </table> voluptates excepturi aut minima
+            aspernatur facilis autem qui in tempora similique a amet voluptate? Distinctio, unde eveniet quasi omnis
+            perspiciatis tempore ex ab laboriosam at tenetur expedita praesentium architecto quia nostrum optio sit
+            accusantium nulla voluptatibus fuga, explicabo vitae alias culpa nemo. Minus ipsam magnam soluta nihil
+            cupiditate, ut fugit magni assumenda, ipsum quas ullam unde possimus cum voluptas, praesentium dolores
+            minima aut harum molestias consequatur veritatis consequuntur mollitia tenetur! Vel rem beatae dolore illum
+            deserunt voluptatem vero blanditiis repellat voluptates officia, qui inventore pariatur quia culpa dolorem
+            dolor at hic alias illo excepturi unde et? Molestias rerum consectetur placeat ea optio doloremque sint qui,
+            laborum, quae, consequatur tenetur inventore veniam quasi aliquam sequi cumque accusamus sit. Fugiat,
+            expedita cum dolorem optio iste magni eius deserunt ipsum similique adipisci mollitia quae dolores
+            perspiciatis pariatur? Quo explicabo sunt quos molestias repellendus blanditiis at ipsam, illum neque
+            dolorem commodi quod porro magnam harum ab omnis suscipit nobis laudantium sit. Incidunt laboriosam alias
+            voluptatum, inventore perferendis excepturi, unde quod soluta necessitatibus et corporis provident dolorum
+            delectus. Natus optio temporibus consequatur voluptates. Quae ratione, amet voluptate corporis architecto
+            exercitationem. Velit impedit placeat provident porro amet laudantium deleniti autem consectetur tenetur,
+            consequatur veritatis? Doloremque expedita aut, autem quisquam maxime consequatur incidunt nesciunt dolorem
+            quas possimus asperiores itaque delectus quidem totam sequi! Cum numquam fugit accusamus ad quidem vero
+            reiciendis iure fuga expedita sint?</article>
+        <section id="lado-direito"></section>
+        <ol id="licoes_aprendidas">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <aside>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, quas iure tempora itaque laboriosam
+            placeat aliquam velit adipisci harum quaerat quo obcaecati quos vero in aut nostrum quisquam repudiandae
+            ipsum soluta impedit dolor veniam eos ut? Animi, incidunt fuga, autem deserunt consequatur tempore vitae
+            omnis sint labore ipsum delectus nam facilis aperiam consectetur exercitationem, voluptas eveniet! Quo,
+            reiciendis. Quis ab hic fugiat quod amet saepe quasi recusandae libero reiciendis quae natus voluptas
+            voluptatem ut veritatis voluptate facilis, ea quas modi sint in asperiores? Dolore libero vero officia
+            necessitatibus optio aut voluptatem labore, error quisquam maxime nesciunt itaque possimus iure ex amet ea
+            aliquam ut. Cum voluptatum, iste quis dignissimos, ab modi consectetur id facilis quidem fuga esse! Expedita
+            quasi sit eum fugiat tempora voluptate maiores dolore placeat? Cupiditate deleniti a officia dolorum
+            repudiandae delectus minima architecto assumenda obcaecati adipisci? Distinctio veniam nulla eius numquam
+            quae odit fugit totam, doloribus aliquam eligendi, nesciunt a rerum dolores vitae facere nostrum porro
+            perspiciatis itaque corrupti natus minus? Voluptate est unde sit eligendi autem exercitationem natus at! Nam
+            consectetur voluptatum fugit vel sint, corporis aliquid suscipit quo enim tempore cum exercitationem quaerat
+            ea quae autem alias beatae odit perferendis optio eos placeat voluptates dolores.</aside>
+        <a href="http://google.com" target="_blank">Link externo a atualizar</a>
+    </main>
+    <footer id="rodape">
+
+    </footer>
 </body>
 
 </html>
