--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       </ul>
     </nav>
   </header>
-  <img id="minha_foto" src="/natalianegreiros.jpeg" alt="Foto de Natália">
+  <main>
+    <img id="minha_foto" src="/natalianegreiros.jpeg" alt="Foto de Natália">
   <h2>Lições</h2>
   <ol id="licoes_aprendidas">
     <li>Unix</li>
@@ -57,6 +58,7 @@
     <li>Python</li>
     <li>Metodolodias Ágeis</li>
   </ul>
+  </main>
   <footer id="rodape">
     <a href="https://github.com/negres" target="_blank">Natália Negreiros</a>
   </footer>
