Adiciona 2 primeirros requisitos

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo"></h1>
-        
+        <h1 id="titulo">Lessons Learned</h1>
+  
     </header> 
+    <img src="Frederico Canoeira.JPG" alt="Foto de Frederico Canoeira">
 </body>
 </html>
