--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <header id="cabecalho">
       <h1 id="titulo">Perycles F.</h1>
+      <img id="minha_foto" src="./img1.jpg" alt="">
   </header>
 </body>
 </html>
