Finishing Requisites #6 and #7 - GOGO Tryber

--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
         <li>Softskills Priority Definitions</li>
         <li>Softskills Empathy</li>
     </ul>
+    <a href="https://trybe.com.br" target="_blank"> Clique here to meet who is making this magic happen.</a>
+    <footer id="rodape">
+        
+    </footer>
 </body>
 </html>
