--- a/index.html
+++ b/index.html
@@ -1,48 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Lessons Learned Nathália Veneziano</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Project Lessons Learned</h1>
+        <nav>
+            <ul>
+                <li>Página Inicial</li>
+                <li>Sobre</li>
+                <li>Contato</li>
+            </ul>
+        </nav>
     </header>
-    <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano" id="minha_foto">
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Empatia</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Slack</li>
-        <li>Zoom</li>
-        <li>Inspect</li>
-        <li>Semantic HTML</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>Forms</li>
-        <li>CSS Responsive</li>
-        <li>ES6</li>
-        <li>HOF</li>
-        <li>Unit Tests</li>
-        <li>React</li>
-        <li>Node</li>
-        <li>SQL</li>
-    </ul>
-    <article>
-        <h1>Sobre o Aprendizado na Trybe</h1>
-        <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os conteúdos de Git, CSS e HTML. Mesmo estando um pouco atrasada em relação ao conteúdo de CSS e HTML, é possível notar que a parte assíncrona é cheia de conteúdo externo que nos ajudam a ampliar e conhecer melhor os comandos apresentados no dia. O mais interessante foi conhecer a turma,que mesmo sendo numerosa e extremamente ansiosa, mas todos colaboram para o crescimento de todos.</p>
-    </article>
-    <section>
-        <h1>Passagem sobre meu Aprendizado</h1>
-        <p>Acho interessante que não estão nos preparando para o mercardo de trabalho apenas nos apresentando as ferramentas mais utilizadas, mas também preparando nosso emocional para lidar com as adversidades que enfrentaremos num dia-a-dia de trabalho.</p>
-    </section>
+    <main>
+        <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano" id="minha_foto">
+        <article>
+            <h1>Sobre o Aprendizado na Trybe</h1>
+            <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os
+                conteúdos de Git, CSS e HTML. Mesmo estando um pouco atrasada em relação ao conteúdo de CSS e HTML, é
+                possível notar que a parte assíncrona é cheia de conteúdo externo que nos ajudam a ampliar e conhecer
+                melhor os comandos apresentados no dia. O mais interessante foi conhecer a turma,que mesmo sendo
+                numerosa e extremamente ansiosa, mas todos colaboram para o crescimento de todos.</p>
+        </article>
+        <section>
+            <h1>Passagem sobre meu Aprendizado</h1>
+            <p>Acho interessante que não estão nos preparando para o mercardo de trabalho apenas nos apresentando as
+                ferramentas mais utilizadas, mas também preparando nosso emocional para lidar com as adversidades que
+                enfrentaremos num dia-a-dia de trabalho.</p>
+        </section>
+        <aside>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Empatia</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>Inspect</li>
+                <li>Semantic HTML</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </ul>
+        </aside>
+    </main>
     <footer id="rodape">
         Feito com 💚 por <a href="https://github.com/nathaliaveneziano" target="_blank">Nathália Veneziano</a>
     </footer>
