--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
 <body>
     <header id="cabecalho"> <h1 id="titulo">Lições Aprendidas - Trybe!</h1></header>
     <img id="minha_foto" src="images/minha_foto.jpg" alt="">
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>HTML Semântico</li>
+        <li>Empatia</li>
+        <li>Inspeção de elementos HTML</li>
+    </ol>
 </body>
 </html>
