--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       </article>
       <section>
          <aside>
-              <h3>Minha Jornada em TI</h3>
-              <p>Comecei minha jornada em TI com 9 anos estudando Windowns 95 e office 95 e outros,com 17 anos fiz um courso técnico de manutenção e instalação de softwares.Aos 19 fiz gradução em Análise de Sistema na Puc-Campinas e atualmente em 2020 iniciei Desenvolvimento web na Trybe. VQV!</p>
+              <p>Comecei minha jornada em TI com 9 anos,com 17 anos fiz um courso técnico de manutenção e instalação de softwares.Aos 19 fiz gradução em Análise de Sistema na Puc-Campinas e atualmente em 2020 iniciei Desenvolvimento web na Trybe. VQV!</p>
          </aside>
       </section>
       <a  href="https://github.com/RafaelBiatoAzevedo" target="_blanc">Rafael Azevedo</a>
