Colocando minha img

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <header id="cabecalho">
     <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
   </header>
+  <main>
+    <section>
+      <img id="minha_foto" src="img/104f3ac6-0e37-4b36-9543-6d8cc515c2d8.jpg" alt="Foto de um Homem segurando um bebê">
+    </section>
+  </main>
 </body>
 </html>
