--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
         <li>Slack</li>
         <li>Zoom</li>
         <li>Linkedin</li>
-        <li>Semantic HTML</li>        
+        <li>Semantic HTML</li>       
     </ol>
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsive</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+        <li>NoSQL</li>
+        <li>HOF</li>
+        <li>ES6</li>
+    </ul>
 </body>
