--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <nav>
     <ul>
-      <li><a href="minha_foto">Home</a></li>
+      <li><a href="#minha_foto">Home</a></li>
     </ul>
   </nav>
   <header id="cabecalho">
@@ -47,15 +47,24 @@
         <li>NodeJS</li>
       </ul>
     </section>
-    <section>
+    <section id="aticle-content">
       <article>
         <p>Estou tendo a oportunidade de aprender programação como nunca tive. Até o momento aprendi com profundidade sobre Bash, Git e GitHub, que são aplicados utilizando o terminal. Vi como tudo ocorre por trás dos panos na internet, como ela funciona ao fazermos uma simples pesquisa. Também aprendi sobre HTML e CSS, e hoje estou aplicando o meu aprendizado construindo esse porrifólio.</p>
       </article>
     </section>
-    <section>
+    <section id="aside-content">
       <aside>
         <p>A primeira vez que vi sobre Git e GitHub, confesso que fiquei meio preocupada em como eu iria aprender e lembrar de tudo, isso foi antes da Trybe, agora com as aulas e o conteúdo, ficou bem mais fácil de assimilar e a prática do dia a dia ajuda bastante também.</p>
       </aside>
+    </section>
+    <section>
+      <table>
+        <tr>
+          <td>Daniela</td>
+          <td>Muller</td>
+          <td>29 anos</td>
+        </tr>
+      </table>
     </section>
   </main>
   <footer id="rodape">
