--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       <section>
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
       </section>
+      <nav>
+        <ul>
+          <li><a href="#">Página inicial</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section>
