lista de coisas a aprender adicionada

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header id="cabecalho">
-        <h1>Licoes aprendidas</h1>
+        <h1 id="titulo">Licoes aprendidas - Trybe</h1>
         <nav id="menu">
            <ul>
                <li>Home</li>
@@ -21,7 +21,8 @@
     </header>
     <div id="Licoes">
         <img id="minha_foto" src="https://scontent.fcgh8-1.fna.fbcdn.net/v/t1.0-9/119194541_155698762852429_2997436748445837010_n.jpg?_nc_cat=105&ccb=2&_nc_sid=09cbfe&_nc_eui2=AeELK4nposWDEPJXaFR-D8FHYOli3vEdICtg6WLe8R0gK2gLZ1p2Xz92_BMo1lzUdBcJK76wW_DvasBFqRfVMatf&_nc_ohc=DTlbb1m83S0AX-RU9Os&_nc_ht=scontent.fcgh8-1.fna&oh=9817100404817d0f500bd264536b4dad&oe=5FE1B35C">
-        <h2>Licoes aprendidas</h2>
+        <a href="https://www.linkedin.com/in/victor-ricco/" target="_blank"><p>Victor Ricco</p></a>
+        <h2>Licoes</h2>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Git</li>
@@ -34,32 +35,18 @@
             <li>Soft Skills</li>
             <li>Empatia</li>
         </ol>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>React</li>
+            <li>SQL</li>
+            <li>Node</li>
+            <li>React</li>
+            <li>Unit Test</li>
+            <li>HOF</li>
+            <li>ES6</li>
+            <li>CSS Responsive</li>
+        </ul>
     </div>
   </body>
 </html>
