8 - artigo sobre aprendizado + correção links (_blank)

--- a/index.html
+++ b/index.html
@@ -43,14 +43,20 @@
                 <li>Metodologias ágeis</li>
             </ul>
         </div>
+        <section id="sobre-aprender">
+            <article>
+                <p>Aqui na TRYBE, o foco é cada vez aprender mais, sendo assim todos os dias temos assuntos diferenciados no esquenta.</p>
+                <p> todo o conteúdo no trybe/course, e depois ainda vamos para uma aula ao vivo sem igual com o especialista Gabriel Oliva. A aula do Oliva é simplesmente sem igual, uma aula descontraída dinâmica e cheia de interação com os alunos.</p> 
+            </article>
+        </section>
     </main>
     <footer id="rodape">
         <h3 class="title-footer">Para conhecer mais:</h3>
         <nav id="navbar-footer">
             <ul id="links-footer">
-                <li><a href="https://www.betrybe.com/">Conheça mais <strong>onde</strong> estudo</a></li>
-                <li><a href="https://pt.wikipedia.org/wiki/Desenvolvimento_web">Conheça<strong> sobre</strong> o que </a></li>
-                <span style="font-size:50px;"><a href="https://github.com/Michaelmascarenhas90"><i class="fab fa-github-alt"></i></a></span>
+                <li><a href="https://www.betrybe.com/" target="_blank">Conheça mais <strong>onde</strong> estudo</a></li>
+                <li><a href="https://pt.wikipedia.org/wiki/Desenvolvimento_web" target="_blank">Conheça<strong> sobre</strong> o que </a></li>
+                <span style="font-size:50px;"><a href="https://github.com/Michaelmascarenhas90" target="_blank"><i class="fab fa-github-alt"></i></a></span>
             </ul>
         </nav>
     </footer>
