--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <head id="cabeçalho">
     <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
 </head>
-  <img src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
-<ul>
+  <img  id="img" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
+<ul id="lista">
   <li>Git;</li>
   <li> github;</li>
   <li>HTML;</li>
