Entrega de requisito 13.

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
                 <li>Unit Tests</li>
             </ul>
         </section>
-        <article>
+        <article id="artigo-aprendizado">
+            <h2>Meu Aprendizado</h2>
             <p>No dia 9 de novembro iniciei minha jornada na <a href="https://www.betrybe.com/" target="_blank">Trybe</a>, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado.</p>
             <p>Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet, HTML e CSS. Realizamos a criação da primeiras páginas HTML, que são o primeiro passo para se tornar um desenvolvedor web full stack.</p>
         </article>
-        <aside>
+        <aside id="artigo-lateral">
+            <h2>Hard e Soft Skills</h2>
             <p>No inicio do curso somos apresentados aos termos hard skills (capacitações técnicas) e soft skills (habilidades comportamentais). Aprendemos que as habilidades comportamentais são tão importantes quanto as técnicas, e que é necessário um treinamento continuo para ambas.</p>
             <table>
                 <h3>Exemplos de Hard/Soft Skills</h3>
