--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
                 </ul>
             </section>
         </main>
+        <footer id="rodape">
+
+        </footer>
     </body>
 </html>
