Arrumando as tag articles para passarem nos requisitos minimos

--- a/index.html
+++ b/index.html
@@ -57,32 +57,18 @@
             </section>
 
             <article>
-                <p>
-                    A formação Trybe é 100% online e conta com aulas ao vivo, onde você interage com sua turma
-                    diariamente.
-                </p>
-                <p>
-                    Você pode fazer toda sua formação de qualquer local, desde que tenha disponibilidade de segunda a
-                    sexta, de 14h às 20h, horário de Brasília, e conquiste a aprovação no processo seletivo da Trybe.
-                </p>
-                <p>
-                    Duração aproximada de 12 meses com carga horária de 1.500 horas.
-                </p>
-                <p>
-                    Na Trybe você vai adquirir o conhecimento técnico e as soft skills necessárias para construir uma
-                    carreira de sucesso em desenvolvimento web e conecte se com o mercado de trabalho.
-                </p>
+                A formação Trybe é 100% online e conta com aulas ao vivo, onde você interage com sua turma
+                diariamente. Você pode fazer toda sua formação de qualquer local, desde que tenha disponibilidade de
+                segunda a sexta, de 14h às 20h, horário de Brasília, e conquiste a aprovação no processo seletivo da
+                Trybe. Duração aproximada de 12 meses com carga horária de 1.500 horas. Na Trybe você vai adquirir o
+                conhecimento técnico e as soft skills necessárias para construir uma carreira de sucesso em
+                desenvolvimento web e conecte se com o mercado de trabalho.
             </article>
         </main>
         <aside>
-            <p>
-                Estudo desenvolvimento de software na Trybe, uma escola que estimula os alunos a trabalharem em equipe,
-                simulando situações reais de trabalho em um time de desenvolvimento.
-            </p>
-            <p>
-                Meus conhecimentos em física e matemática me proporcionaram habilidades que julgo importantes para
-                programação.
-            </p>
+            Estudo desenvolvimento de software na Trybe, uma escola que estimula os alunos a trabalharem em equipe,
+            simulando situações reais de trabalho em um time de desenvolvimento. Meus conhecimentos em física e
+            matemática me proporcionaram habilidades que julgo importantes para programação.
         </aside>
     </div>
 
