Requisito 9 - cria a seção aside

--- a/index.html
+++ b/index.html
@@ -49,13 +49,21 @@
                 </article>
             </header>
         </section>
-        <footer id="rodape">
-            <h3>Compilado por Raquel Picanço</h3>
-            <nav>
-                <a href="https://github.com/rach-vp" target="_blank">Github</a>
-                <a href="https://www.linkedin.com/in/raquel-pican%C3%A7o-384736107/" target="_blank">Linkedin</a>
-            </nav>
-        </footer>
+        <aside>
+            <article>
+                <header><h2>A briga com a centralização vertical...</h2></header>
+                <article>
+                    <p>Após a aula do bloco 3.3, onde estudamos um pouco mais sobre os seletores no CSS, tentei aplicar na página do meu portfólio o conteúdo visto. Criei uma seção a qual precisava centralizar um conteúdo verticalmente e passei o final de semana todo tentando fazê-lo.</p>
+                </article>
+            </article>
+        </aside>
     </main>
+    <footer id="rodape">
+        <h3>Compilado por Raquel Picanço</h3>
+        <nav>
+            <a href="https://github.com/rach-vp" target="_blank">Github</a>
+            <a href="https://www.linkedin.com/in/raquel-pican%C3%A7o-384736107/" target="_blank">Linkedin</a>
+        </nav>
+    </footer>
 </body>
 </html>
