--- a/index.html
+++ b/index.html
@@ -12,4 +12,36 @@
         <h1 id="titulo"> Título </h1>
 
     </header>
+
+    <main>
+    <img id="minha_foto" src="ricardo.jpg" alt="Foto do perfil de Ricardo Sbeghen">
+
+    <ol id="licoes_aprendidas"> 
+        <li>Forms</li>
+        <li>Soft Skills</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Unix></li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>HTML</li>
+        <li>CSS</li>
+    </ol>
+
+    <ul id="licoes_a_aprender">
+        <li>Estrutura da Dados</li>
+        <li>Phyton</li>
+        <li>Javascript</li>
+        <li>CSS Flexbox</li>
+        <li>CSS Responsivo</li>
+        <li>DOM</li>
+        <li>Arquitetura de Software</li>
+        <li>NodeJS</li>
+        <li>NoSQL</li>
+        <li>React</li>
+    </ul>
+
+    </main>
+
 </body>
