--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
         <article>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate quod magnam minima et dolorem quos. Voluptatibus, velit dolorem similique a laboriosam nam, itaque autem officia expedita officiis ducimus quasi ipsam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos repellat incidunt, labore eaque voluptatum iusto culpa quo voluptatibus. Enim delectus voluptas pariatur hic. Placeat dicta libero vero perspiciatis, nobis et?</p>
         </article>
+        <section>
+            <table>
+                <tr>
+                    <th>Nome:</th>
+                    <td>Thiago</td>
+                </tr>
+                <tr>
+                    <th>Idade:</th>
+                    <td>19</td>
+                </tr>
+            </table>
+        </section>
     </main>
     <footer id="rodape">
         <span>Feito por Thiago Carreira Vallim</span>
