Finishing Requisite #8 - GOGO Tryber

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         <li>Softskills Priority Definitions</li>
         <li>Softskills Empathy</li>
     </ul>
+    <article>
+        <p>
+            Aprendendo a aprender - Go Tryber
+          Por conseguinte, a execução dos pontos do programa nos obriga à análise dos métodos utilizados na avaliação de resultados. 
+          Por outro lado, a complexidade dos estudos efetuados facilita a criação do impacto na agilidade decisória. 
+          Assim mesmo, a contínua expansão de nossa atividade acarreta um processo de reformulação e modernização das direções preferenciais no sentido do progresso. 
+          Pensando mais a longo prazo, a estrutura atual da organização possibilita uma melhor visão global das condições financeiras e administrativas exigidas. 
+        </p>
+    </article>
     <a href="https://trybe.com.br" target="_blank"> Clique here to meet who is making this magic happen.</a>
     <footer id="rodape">
         
