--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-
+    <header id="cabecalho">
+        <h1 id="titulo">Lições prendidas - Trybe!</h1>
+    </header>
 </body>
 </html>
