--- a/index.html
+++ b/index.html
@@ -11,38 +11,63 @@
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Lessons Learned</h1>
+
+    <nav>
+    <ul>
+      <li><a href=""></a>Página Inicial</li>
+      <li><a href=""></a>Artigo</li>
+      <li><a href=""></a>Fotografia</li>
+    </ul>
+  </nav>
+
   </header>
 
   <img id="minha_foto" src="/rsz_1img_20200517_133641.jpg" alt="">
 
-  <ul id="licoes_aprendidas">
-    <li>Terminal Shell</li>
-    <li>Git</li>
-    <li>GitHub</li>
-    <li>Como funciona a internet</li>
-    <li>HTML</li>
-    <li>HTML - posicionamento</li>
-    <li>CSS</li>
-    <li>HTML semântico</li>
-    <li>O stomatopoda</li>
-    <li>Projeto</li>
-  </ul>
+  <section>
+    <aside>
+      <nav>
+      <ol id="licoes_aprendidas">
+        <li>Terminal Shell</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Como funciona a internet</li>
+        <li>HTML</li>
+        <li>HTML - posicionamento</li>
+        <li>CSS</li>
+        <li>HTML semântico</li>
+        <li>O stomatopoda</li>
+        <li>Projeto</li>
+      </ol>
 
-  <ul id="licoes_a_aprender">
-    <li>JavaScript</li>
-    <li>UI & UX</li>
-    <li>React</li>
-    <li>Nodejs</li>
-    <li>Expressjs</li>
-    <li>SQL & NoSQL/li>
-    <li>Python</li>
-    <li>Soft Skills</li>
-    <li>Front-end</li>
-    <li>Back-end</li>
-  </ul>
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>UI & UX</li>
+        <li>React</li>
+        <li>Nodejs</li>
+        <li>Expressjs</li>
+        <li>SQL & NoSQL/li>
+        <li>Python</li>
+        <li>Soft Skills</li>
+        <li>Front-end</li>
+        <li>Back-end</li>
+      </ul>
+    </aside>
+  </section>
+
+  <section>
+    <table>
+      <th>
+        <tr>Tabela</tr>
+      </th>
+      <th>
+      <td>A completar</td>
+      </th>
+    </table>
+  </section>
 
   <footer id="rodape">
-    Compilado por: <a href="https://www.linkedin.com/in/devsfelipesantiago/">Felipe Santiago</a>
+    Compilado por: <a target="_blank" href="https://www.linkedin.com/in/devsfelipesantiago/">Felipe Santiago</a>
   </footer>
 </body>
 
