--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
         <main>
             <img id="minha_foto" src="pamela.jpeg" alt="Foto de Pamela Anderson Sales">
-            <ol id="licoes aprendidas"><h2>Lições aprendidas:</h2>
+            <ol id="licoes_aprendidas"><h2>Lições aprendidas:</h2>
                 <li>Fundamentos do Desenvolvimento Web</li>
                 <li>Unix & Shell</li>
                 <li>Bash</li>
@@ -38,5 +38,8 @@
                 <li>NodeJS</li>
             </ul>
         </main>
+        <footer id="rodape">
+            <h6>Todos os direitos reservados, Pamela Sales.</h6>
+        </footer>
   </body>
 </html>
